# molcraft-agent

./: .env.example  .gitignore  .mcp.json  README.md  launcher.py  pyproject.toml  requirements.txt
agent_core/: __init__.py  engine.py  experiments.py  paper_exporter.py  tools.py  visualization.py  workspace_context.py
config/: mcporter.json
server/: app.py  auth.py  database.py  dependencies.py  encryption.py  schemas.py
server/models/: __init__.py  conversation.py  experiment.py  user.py  workspace.py
server/routers/: __init__.py  auth.py
server/static/: index.html
server/static/css/: style.css
server/static/js/: app.js
